--- a/app/views/cosmetics-general/ingredients-list-02.html
+++ b/app/views/cosmetics-general/ingredients-list-02.html
@@ -28,11 +28,11 @@
         </h1>
 
         <p class="govuk-body govuk-!-margin-bottom-1 opss-secondary-text">
-            Ingredient Lorem ipsum is included in notifications (after 2 October 2022) by these Responsible Persons. <br class="opss-br-desktop">
+            Ingredient Aorem ipsum dolor is included in notifications (after 2 October 2022) by these Responsible Persons. <br class="opss-br-desktop">
         </p>
 
         <p class="govuk-body-s opss-secondary-text">
-            From here you can view all the notifications by the Responsible Person which include the ingredient.
+            From here you can view all the notifications by the Responsible Person which include this ingredient.
         </p>
 
     </div>
@@ -65,7 +65,8 @@
                         <li>
                             <a href="/cosmetics-general/ingredients-list-02.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold opss-link--no-hover" aria-current="page">
                                 Responsible Persons
-                            </a>
+                            </a> <br>
+                            Aorem ipsum dolor
                         </li>
                   
                     </ul>
@@ -105,7 +106,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p class="govuk-body-s">
-                    There are currently 137 Responsible Persons with active notifications that include the ingredient Lorem ipsum (notified after 2 October 2022).
+                    There are currently 137 Responsible Persons with active notifications (notified after 2 October 2022) which include the ingredient Aorem ipsum dolor.
                 </p>                    
             </div>
         </div>
@@ -117,7 +118,7 @@
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredients-list-03.html">Aorem ipsum dolor</a>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredients-list-03.html">Procter &amp; Gamble</a>
                         </li>
                         <li>
                             <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredients-list-03.html">Beritatis ipsum impedit</a>
