--- a/app/views/cosmetics-general/ingredients-list-03.html
+++ b/app/views/cosmetics-general/ingredients-list-03.html
@@ -30,9 +30,7 @@
 
 
         <p class="govuk-body opss-secondary-text">
-            <!--Ingredient <span class="govuk-!-font-weight-bold">Lorem ipsum</span> is included in these notifications by Lorem ipsum (after 2 October 2022).-->
-
-            These are all the notifications by Lorem ipsum (notified after 2 October 2022) which include the ingredient Lorem ipsum.
+            These are all the notifications by Procter &amp; Gamble (notified after 2 October 2022) which include the ingredient Aorem ipsum dolor.
         </p>
 
     </div>
@@ -65,13 +63,15 @@
                         <li>
                             <a href="/cosmetics-general/ingredients-list-02.html" class="govuk-link govuk-link--no-visited-state">
                                 Responsible Persons
-                            </a>
+                            </a> <br>
+                            Aorem ipsum dolor
 
                             <ul class="govuk-list">
                                 <li>
                                     <a href="/cosmetics-general/ingredients-list-03.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold opss-link--no-hover" aria-current="page">
                                         Notifications
-                                    </a>
+                                    </a> <br>
+                                    Procter &amp; Gamble
                                 </li>                                 
                             </ul>
                         </li>
