--- a/app/views/cosmetics-clone/index.html
+++ b/app/views/cosmetics-clone/index.html
@@ -51,7 +51,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                    <span class="govuk-caption-m">Create a notification template:</span>
+                    <span class="govuk-caption-m">Create a draft notification<br class="opss-br-desktop"> using this one as a template:</span>
                     <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
                         Notification templating <abbr>HTML</abbr>/Designs
                     </h1>
@@ -75,7 +75,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full govuk-!-padding-top-7">
 
-        <h2 class="govuk-heading-s">Create a notification template</h2>
+        <h2 class="govuk-heading-s">Create a draft notification<br class="opss-br-desktop"> using this one as a template</h2>
    
         <ol class="govuk-list govuk-list--number govuk-list--spaced">
             <li>
@@ -89,9 +89,12 @@
 
                 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
-                    <li>
+                    <li class="strike">
                         <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-clone/what-is-the-name-2_alt" target="_blank">What is the product name?</a> - an alternative design
                     </li>
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-clone/what-is-the-name-2_error" target="_blank">What is the product name? Error message</a> - "Enter a product name" (to protect against blank values) <b>and</b> this error message to avoid duplicate <b>active</b> notifications for one RP.
+                    </li>                    
                 </ul>                   
             </li>             
             <li>
