--- a/app/views/cosmetics-clone/notification-1.html
+++ b/app/views/cosmetics-clone/notification-1.html
@@ -26,7 +26,9 @@
 
           <div class="govuk-grid-column-one-third">
             <div class="opss-text-align-right govuk-!-margin-bottom-8">
-              <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-underline-offset" href="what-is-the-name-2.html">Create a notification template</a>
+              <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-underline-offset" href="what-is-the-name-2.html">
+                Create a draft notification using<br class="opss-br-desktop"> this notification as a template
+              </a>
             </div>
           </div>
 
