--- a/app/views/cosmetics-clone/what-is-the-name-2_alt.html
+++ b/app/views/cosmetics-clone/what-is-the-name-2_alt.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Create a notification template
+    Create a draft notification<br class="opss-br-desktop"> using this one as a template
 {% endblock %}
 
 {% block beforeContent %}
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full">
 
       <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-        Create a notification template
+        Create a draft notification<br class="opss-br-desktop"> using this one as a template
       </h1>
 
     </div>
