delete a case journey pages

--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -203,10 +203,8 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-case-specific-x2-1-new.html" target="_blank">Case page - case specific information</a> 2x products with no values
             </li>            
 
-
-            
-
         </ol>
+        
 
         <h3 class="govuk-heading-s"><abbr>OPSS</abbr> pages - updating</h3>
 
@@ -261,6 +259,19 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-timestamped" target="_blank">Case page closed - Products page</a> - now uses an alternative text
             </li>
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-closing-journey-01.html" target="_blank">
+                    Closing a case journey</a> 01 - explaination page
+            </li>
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-closing-journey-02.html" target="_blank">
+                    Closing a case journey</a> 02 - are you sure page
+            </li>
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-closing-journey-03.html" target="_blank">
+                    Closing a case journey</a> 03 - it was deleted page
+            </li>                        
+
         </ol>        
 
         <h3 class="govuk-heading-s">Cases - products pages</h3>
