added extra sorting

--- a/app/views/cosmetics-general/ingredients-list-02.html
+++ b/app/views/cosmetics-general/ingredients-list-02.html
@@ -90,8 +90,9 @@
                         </label>
 
                         <select class="govuk-select govuk-!-margin-bottom-1" name="notification_search_form[sort_by]" id="notification_search_form_sort_by">
-                            <option value="alpha" selected>A - Z</option>
-                            <option value="alpha2">Z - A</option>
+                            <option value="az" selected>A - Z</option>
+                            <option value="za">Z - A</option>
+                            <option value="most">Most notifications</option> <!-- sort by RPs with the most notifications with this ingredient -->
                         </select>
 
                         <button class="govuk-button opss-js-enabled-hidden">
