--- a/app/views/psd-revised-flow/case-closing-journey-02.html
+++ b/app/views/psd-revised-flow/case-closing-journey-02.html
@@ -24,7 +24,7 @@
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
                           <span class="govuk-warning-text__assistive">Warning</span>
-                          Case 11993-998 &ndash; including its images and supporting information &ndash; will be permanently deleted.
+                          Case 11993-998 &ndash; including its images and supporting information &ndash; will be deleted.
                         </strong>
                     </div>                    
 
